deployments/k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hono-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    nginx.ingress.kubernetes.io/rewrite-target:  /
spec:
  tls:
    - hosts:
        - hono-api-test.testdu.uib.no
      secretName: hono-api-ingress-tls
  rules:
    - host: hono-api-test.testdu.uib.no
      http:
        paths:
          - path: /dev/hono-api
            pathType: Prefix
            backend:
              service: 
                name: hono-api
                port:
                  number: 80
